language/move-lang/tests/move_check/parser/constants_standalone_let.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/constants_standalone_let.move:4:21
  │
4 │     const C1: u64 = let x = 0;
  │                     ^^^
  │                     │
  │                     Unexpected 'let'
  │                     Expected an expression term

