language/move-lang/tests/move_check/parser/constants_standalone_let.move
address 0x42 {
module M {

    const C1: u64 = let x = 0;
}
}
